# aoc_2022

./: 01.hs  01.rb  aoc.cabal
01/: aoc.cabal  auth.txt
02/: 02.hs  02.rb  aoc.cabal
03/: 03.hs  03.rb  aoc.cabal
04/: 04.hs  04.rb  aoc.cabal
05/: 05.hs  05.rb  aoc.cabal
06/: 06.hs  06.rb  aoc.cabal
07/: 07.hs  07.rb  aoc.cabal
08/: 08.rb
09/: 09.rb  aoc.cabal
10/: 10.rb
11/: 11.rb
12/: 12.rb
13/: 13.rb
14/: 14.rb
15/: 15.rb  diamond.rb
16/: 16.rb
17/: 17.rb
