cabal-version:       >=1.10

name:                AOC
version:             0.1.0.0
build-type:          Simple

executable 02
  main-is:             02.hs

  -- other-extensions:
  build-depends:       base >=4.13,
                       split >= 0.2
  -- hs-source-dirs:
  default-language:    Haskell2010
